[19] Rewrite dominance rules for record patterns #184